<resources>
    <string name="app_name">PhoneBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="phone_number">Телефонный номер</string>
    <string name="toast_enter_name">Введите имя</string>
    <string name="toast_enter_surname">Введите фамилию</string>
    <string name="toast_enter_phote_number">Введите номер телефона</string>
    <string name="enter_all_editText">Заполните каждое поле</string>
    <string name="label_name">Телефонная книга</string>
    <string name="change_contact_title">Изменить контакт</string>
    <string name="new_contact_title">Новый контакт</string>
    <string name="main_title">Телефонная книга</string>
    <string name="tvDelete">Удалить</string>
</resources>